--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </head>
     <body>
          <!-- HEADER START -->
-        <header>
+         <!-- <header>
             <div class="row">
                 <div class="col-sm-4 col-md-4"></div>
                 <div class="col-sm-4 col-md-4 heading">
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-sm-4 col-md-4"></div>
             </div>
-        </header>
+        </header> -->
          <!-- HEADER END -->
         
         <div id="dashboard"></div>
