Added Number Display for graphs 1 & 2

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="col-md-12 col-lg-4">
                         <div class="graph-para"> 
                             <h2> Occurences of Natural Disasters Since 1900 - 2019</h2>
-                            <h3 id="occurence_id"></h3>
+                            <h3 id="occurrence_id"> Total Occurrences</h3>
                             <hr width=65%>
                             <p>
                                 Displayed on the Zoomable Stacked 
@@ -131,6 +131,7 @@
                     <div class="col-md-12 col-lg-4">
                         <div class="graph-para"> 
                             <h2> Total Deaths Caused By Natural Disasters Since 1900 - 2019</h2>
+                            <h3 id="total_deaths_id"> Total Deaths</h3>
                             <hr width=65%>
                             <p>
                                 This interactive line chart displays 
@@ -157,12 +158,17 @@
                         <div class="graph-para">
                             <h2> Total Money Spent ('000 USD) Per Country </h2>
                             <hr width=65%>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum accusamus tempora placeat hic cupiditate mollitia saepe ullam quos incidunt officiis. Odit rem nisi sapiente delectus enim laudantium expedita aspernatur voluptatem, nobis officiis tempore reprehenderit autem, esse amet corporis nostrum itaque adipisci a accusantium maxime eum repellendus! Repellat nobis, facilis laboriosam.</p>
+                            <p> 
+                                This pie-chart shows the top 10 total
+                                money Spent by each country. Overall, 
+                                top 3 are: USA, China and Japan. The
+                                reasons for this could be argued over
+                                several topics.
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-12 col-lg-8 overflow-auto">
                         <div id="piechart-1"></div>
-                        <div id="piechart-2"></div>
                     </div>
                 </div>
             </div>
