Added methods() callng method into Jasmine Testing

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <li> Total Occurences of disasters and types of disasters. </li>
                     </ul>
                     <p> 
-                        Use the menu in the top left to reset all data and change the charts 
+                        Use the menu in the top left ( <i class="far fa-arrow-alt-circle-down"></i> ) to reset all data and change the charts 
                         according to diaster type and please be aware this website is meant to 
                         be viewed on a laptop screen or larger for each chart to render all graphs
                         as they were intended to be displayed at.  
